--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
-// --- header section ---
-//   --- logo ---
-//   --- menu ---
+// --- header section 
+// ----- logo 
+// ----- menu 
+// ------- nav menu
 
 @import 'fonts';
 @import 'vars';
@@ -11,14 +12,14 @@
 	box-sizing: border-box;
 }
 
-// --- header section ---
+// --- header section 
 
 .header-section__content {
 	display: grid;
 	grid-template-columns: 165fr 170fr 80fr minmax(280px, 550fr) 80fr minmax(330px, 465fr);
 	background: $color-beige;
 }
-//   --- logo ---
+// ----- logo 
 
 .logo {
 	margin-top: 50px;
@@ -51,21 +52,34 @@
 		height: 22px;
 		margin: 0;
 		padding: 0;
+		transition: 0.3s;
 
 		&-facebook {
 			background: url(../img/header-section/logo/social-icons/facebook-icon.png) center center no-repeat;
+			&:hover {
+				transform: translateY(-10%);
+			}
 		}
 
 		&-twitter {
 			background: url(../img/header-section/logo/social-icons/twitter-icon.png) center center no-repeat;
+			&:hover {
+				transform: translateY(-10%);
+			}
 		}
 
 		&-linkedin {
 			background: url(../img/header-section/logo/social-icons/linkedin-icon.png) center center no-repeat;
+			&:hover {
+				transform: translateY(-10%);
+			}
 		}
 
 		&-gplus {
 			background: url(../img/header-section/logo/social-icons/gp-icon.png) center center no-repeat;
+			&:hover {
+				transform: translateY(-10%);
+			}
 		}
 	}
 
@@ -88,7 +102,7 @@
 	grid-column: 4;
 }
 
-//   --- menu ---
+// ----- menu 
 
 .menu {
 	position: relative;
@@ -96,21 +110,9 @@
 	width: 100%;
 	background: #7acec3;
 	grid-column: 6;
-	overflow: hidden;
-
-	&__square {
-		position: absolute;
-		right: 31.5%;
-		top: 10%;
-		width: 100%;
-		height: 100%;
-		max-width: 21%;
-		max-height: 20%;
-	}
 
 	&__adress {
-		display: block;
-		position: absolute;
+		@extend %pos_absolute-block;
 		color: #fff;
 		bottom: 34%;
 		left: 11%;
@@ -124,8 +126,7 @@
 	}
 
 	&__contacts {
-		display: block;
-		position: absolute;
+		@extend %pos_absolute-block;
 		color: #fff;
 		left: 28%;
 		top: 75%;
@@ -142,3 +143,88 @@
 		@extend %inclined_line;
 	}
 }
+
+// ------- nav menu 
+
+.nav-menu {
+	@extend %pos_absolute-block;
+	right: 31.5%;
+	top: 10%;
+	width: 100%;
+	height: 100%;
+	max-width: 21%;
+	max-height: 20%;
+
+	&__item-base {
+		@extend %pos_absolute-block;
+		width: 100%;
+		height: 100%;
+	}	
+
+	&__item-1 {
+		@extend %nav-menu__item;
+		left: -75%;
+		transform: translateX(90%);
+		transition: 1s;
+	}
+
+	&:hover &__item-1 {
+		transform: translateX(-11%);
+		opacity: 1;
+		visibility: visible;
+	}
+
+	&__item-2 {
+		@extend %nav-menu__item;
+		left: -150%;
+		transform: translateX(180%);
+		transition: 1s;
+	}
+
+	&:hover &__item-2 {
+		transform: translateX(-26%);
+		opacity: 1;
+		visibility: visible;
+	}
+
+	&__item-3 {
+		@extend %nav-menu__item;
+		left: -225%; //step 75
+		transform: translateX(270%); //step 90
+		transition: 1s;
+	}
+
+	&:hover &__item-3 {
+		transform: translateX(-39%); //step 13
+		opacity: 1;
+		visibility: visible;
+	}
+
+	&__item-4 {
+		@extend %nav-menu__item;
+		left: -300%; //step 75
+		transform: translateX(360%); //step 90
+		transition: 1s;
+	}
+
+	&:hover &__item-4 {
+		transform: translateX(-52%); //step 13
+		opacity: 1;
+		visibility: visible;
+	}
+
+	&__item-5 {
+		@extend %nav-menu__item;
+		left: -375%; //step 75
+		transform: translateX(450%); //step 90
+		transition: 1s;
+	}
+
+	&:hover &__item-5 {
+		transform: translateX(-65%); //step 13
+		opacity: 1;
+		visibility: visible;
+	}
+}
+
+@import 'media';
