--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -27,21 +27,18 @@ $robotoClight: 'RobotoCondensed-Light-grid';
 
 %nav-menu__item {
 	@extend %pos_absolute-block;
+	padding-top: 32px;
 	text-transform: uppercase;
 	font-family: $robotoReg;
 	font-size: 14px;
 	color: #fff;
 	background: #f8c255;
-	width: 90%;
-	height: 91%;
-	top: 2.4%;
-	padding: 0;
-	margin: 0;
+	width: 80px;
+	height: 80px;
 	text-decoration: none;
 	opacity: 0;
 	visibility: hidden;
 	text-align: center;
-	padding-top: calc(55% - 14px);
 }
 
 @mixin item-position($top, $left) {
