--- a/sass/main.scss
+++ b/sass/main.scss
@@ -139,9 +139,9 @@
 		font-size: 13px;
 	}
 
-	&::after {
-		@extend %inclined_line;
-	}
+	// &::after {
+	// 	@extend %inclined_line;
+	// }
 }
 
 // ------- nav menu 
@@ -151,20 +151,19 @@
 	cursor: pointer;
 	right: 31.5%;
 	top: 10%;
-	width: 100%;
-	height: 100%;
-	max-width: 21%;
-	max-height: 20%;
+	width: 80px;
+	height: 80px;
+	// display: flex;
 
 	&__item-base {
 		@extend %pos_absolute-block;
 		width: 100%;
 		height: 100%;
-	}	
+	}
 
 	&__item-1 {
 		@extend %nav-menu__item;
-		left: -75%;
+		left: -87%;
 		transform: translateX(90%);
 		transition: 1s;
 		&:hover {
@@ -180,7 +179,7 @@
 
 	&__item-2 {
 		@extend %nav-menu__item;
-		left: -150%;
+		left: -170%;
 		transform: translateX(180%);
 		transition: 1s;
 		&:hover {
@@ -196,7 +195,7 @@
 
 	&__item-3 {
 		@extend %nav-menu__item;
-		left: -225%; //step 75
+		left: -255%; //step 75
 		transform: translateX(270%); //step 90
 		transition: 1s;
 		&:hover {
@@ -212,7 +211,7 @@
 
 	&__item-4 {
 		@extend %nav-menu__item;
-		left: -300%; //step 75
+		left: -340%; //step 75
 		transform: translateX(360%); //step 90
 		transition: 1s;
 		&:hover {
@@ -228,7 +227,7 @@
 
 	&__item-5 {
 		@extend %nav-menu__item;
-		left: -375%; //step 75
+		left: -425%; //step 75
 		transform: translateX(450%); //step 90
 		transition: 1s;
 		&:hover {
@@ -248,7 +247,7 @@
 .projects-section {
 	display: grid;
 	grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-	grid-template-columns: minmax(230px, 300fr) 165fr 270fr 300fr 465fr;
+	grid-template-columns: minmax(230px, 300fr) 165fr 270fr 300fr minmax(300px, 465fr);
 	grid-template-areas: 'project project fondue fondue potter'
 						 'project project fondue fondue tabano'
 						 'louis number number number tabano'
@@ -442,7 +441,7 @@
 	}
 
 	&__button {
-		@include item-position(19.3%, 78%);
+		@include item-position(19.3%, 28%);
 	}
 }
 
